# capitalize

./: .gitignore  LICENSE  Makefile  README.md  setup.cfg
examaples/: example_1.py
examples/: example_1.py
src/capitalize/: __init__.py  main.py
tests/: test_capit_fun.py
