[metadata]
name = capitalize
version = 0.0.1
author = Salih Tasdelen
author_email = salih.tasdelen@hotmail.com
description = Capitalizes the given input
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SalihTasdelen/capitalize
project_urls = 
	Bug Tracker = https://github.com/SalihTasdelen/capitalize/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
	= src

packages = find:
python_requires = >=3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	capitalize = capitalize.main:main_cli

